<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory</string>

    <!-- strinng for sell button-->
    <string name="sell_button_text">SELL</string>

    <!--string for insert dummy data-->
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <!-- string for delete all products menu button-->
    <string name="action_delete_all_enteries">Delete All Products</string>

    <string name="unit_product_price">$</string>

    <string name="unit_product_qty">QTY</string>

    <string name="hint_quantity">Quantity</string>

    <string name="hint_name">Name</string>

    <string name="hint_price">Price</string>

    <string name="hint_supplier_info">Info</string>

    <string name="text_supplier_info">Supplier Info</string>

    <string name="text_product_info">Product Info</string>

    <string name="text_product_type">Product Type</string>

    <string name="product_unknown">Unknown</string>

    <string name="product_food">Food</string>

    <string name="product_household">Household</string>

    <string name="action_save_product">Save Product</string>

    <string name="action_delete_product">Delete</string>

    <string name="title_edit_product">Edit Product</string>

    <string name="title_add_product">Add Product</string>

    <string name="dialog_action_keep_editing">Keep Editing</string>

    <string name="dialog_action_discard">Discard</string>

    <string name="dialog_action_cancel">Cancel</string>

    <string name="dialog_action_delete">Delete</string>

    <string name="unsaved_dialog_message">Discard your changes and quit editing?</string>

    <string name="delete_dialog_message">Delete this product?</string>

    <string name="empty_view_text">Press the add button to add products</string>

</resources>
