<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:paddingTop="@dimen/activity_margin"
        android:src="@drawable/ic_action_add_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/text_product_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/product_name_editText"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/product_quantity_editText"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_quantity"
                        android:inputType="number" />

                    <TextView
                        style="@style/EditorUnitsStyle"
                        android:text="@string/unit_product_qty" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/increment_button"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:text="+"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <Button
                        android:id="@+id/decrement_button"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/increment_button"
                        android:layout_alignParentRight="true"
                        android:text="-"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/product_price_editText"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_price"
                    android:inputType="number" />

                <TextView
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_product_price" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/text_product_type" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/product_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"></Spinner>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/text_supplier_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_info_editText"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_info"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>